fixed shifting buttons, added icons

--- a/ProektVino/src/main/resources/bg/tu_varna/sit/vino/project_vino_group12/presentation.views/css/HelloPage.css
+++ b/ProektVino/src/main/resources/bg/tu_varna/sit/vino/project_vino_group12/presentation.views/css/HelloPage.css
@@ -41,7 +41,7 @@
     -fx-scale-x: 1.1;
     -fx-scale-y: 1.1;
     -fx-scale-z: 1.1;
-    -fx-font-size: 18;
+    -fx-font-size: 17;
     -fx-font-style: italic;
     -fx-position:fixed;
 }
